# yandex-music-playlist-backup

./: .gitignore  README.md  pyproject.toml  refresh.py  tracks.csv
backup/: refresh.py  tracks.csv
