[project]
name = "yandex-music-playlist-backup"
version = "0.1.0"
description = ""
license = "GNU GENERAL PUBLIC LICENSE V3"
authors = [
    {name = "Simon",email = "spam@esemi.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
