[project]
name = "yandex-music-playlist-backup"
version = "0.1.0"
description = ""
license = "GNU GENERAL PUBLIC LICENSE V3"
authors = [
    {name = "Simon",email = "spam@esemi.ru"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "yandex-music>=2.1.1",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
